wikipedia/manifests/service.yaml
apiVersion: v1

kind: Service

metadata:
  name: wikipedia-svc
  namespace: exercises

spec:
  type: ClusterIP
  selector:
    app: wikipedia
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
